# Labs

./: .gitignore  BigInt.cpp  BigInt.hpp  CMakeLists.txt  Life_ConstructorFromFile.cpp  Life_Core.cpp  Life_Core.h  Life_FileParsing.cpp  Life_Interface.cpp  Life_Interface.h  Life_Interface_offline.cpp  Life_Interface_online.cpp  SoundProcessor.cpp  SoundProcessor.h  config.cpp  config.h  converters.cpp  converters.h  converters_factory.cpp  converters_factory.h  converters_functions.cpp  example_1.txt  example_2.txt  main.cpp  sample.cpp  sample.h  test.cpp  test.h  test_main.cpp  tests.cpp  wav_class.cpp  wav_class.h  wav_input.cpp  wav_input.h  wav_output.cpp  wav_output.h  waw_class.cpp  waw_class.h  waw_input.cpp  waw_input.h  (+2 more)
Lab1/: BigInt.cpp  BigInt.hpp  CMakeLists.txt  main.cpp
Lab2/: Life_Core.cpp  Life_Core.h  Life_FileParsing.cpp  Life_FileParsing.h  Life_FileParsing_functions.cpp  Life_Interface.cpp  Life_Interface.h  Life_Interface_offline.cpp  Life_Interface_online.cpp  test_main.cpp  tests.cpp
Lab3/: .gitignore  CMakeLists.txt  README.md  SoundProcessor.h  config.cpp  config.h  constants.h  converters.cpp  converters.h  converters_factory.cpp  converters_factory.h  converters_functions.cpp  main.cpp  sample.cpp  sample.h  sound_processor.cpp  sound_processor.h  soundprocessor.cpp  soundprocessor.h  wav_class.h  wav_input.cpp  wav_input.h  wav_output.cpp  wav_output.h
